[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Lama Alosaimi <you@example.com>"]


[tool.poetry.dependencies]
python = "^3.10"
langchain-core = "*"
langchain = {extras = ["openai"], version = "^0.3.19"}
langchain-groq = "*"
langchain-community = "*"
langchain-openai = "^0.3.7"
requests = "^2.32.3"
langgraph = "^0.3.2"
pandas = "^2.2.3"
streamlit = "^1.43.1"
graphviz = "^0.20.3"

[tool.poetry.scripts]
start = "src.run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
